# arc

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: BUILD_PLAN.md
indicators/: Lead_Lag_Signal_Detector_v2_0.pine
