[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "arc"
version = "0.1.0"
description = "Asymmetric Reaction Capture — single-signal reactive trading system"
requires-python = ">=3.12"
readme = "README.md"

[project.scripts]
arc = "arc.pipeline.cli:main"
